# rust-embedded-example-project

./: .travis.yml  README.md
binary/: Cargo.toml  openocd.gdb
binary/src/: main.rs
ci/: install.sh  script.sh
firmware/: Cargo.toml
firmware/src/: lib.rs  tests.rs
